Validation XML complete

--- a/validate_xml/input.html
+++ b/validate_xml/input.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 <div id="validator">
-<textarea  id="content" cols="50" rows="20" onblur="validate_xml(this)"></textarea></br>
+<textarea type="text" id="content" cols="100" rows="40"></textarea></br>
 <input  type="submit"  id="button1" value="Validate"/>
+<label id="result"/>
 </div>
 </body>
 </html>
