Added the json validation along with this

--- a/validate_xml_json/input.html
+++ b/validate_xml_json/input.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 <div id="validator">
+<input type="submit" id="xml" value="ValidateXML"/>
+<input type="submit" id="json" value="ValidateJSON"/></br>
 <textarea type="text" id="content" cols="100" rows="40"></textarea></br>
-<input  type="submit"  id="button1" value="Validate"/>
 <label id="result"/>
 </div>
 </body>
