Renamed the plugin

--- a/HeadLines/popup.html
+++ b/HeadLines/popup.html
@@ -2,7 +2,7 @@
 <html>
 <title>NewsBin</title>
 <head>
-	<h1 align="center">NewsBin</h1>
+	<h1 align="center">HeadLines-Google News</h1>
 	<style>
 	body {
 		background-color: #eeeeee;
