Added the screenshot

--- a/HeadLines/popup.html
+++ b/HeadLines/popup.html
@@ -27,9 +27,9 @@
 	<script src="news.js"></script>
 </head>
 <body>
-    <button type="button" onclick="reload()">Refresh</button>
-    <br/>
+    <p>Last Updated:
     <text id="lastUpdated"></text>
+    </p>
 	<div id="newsList"></div>
 </body>
 </html>
